naloga2/prev22/gen/PrevParser.java
// Generated from /Users/zigapk/University/prev/naloga1/prev22/src/prev/phase/synan/PrevParser.g4 by ANTLR 4.9.2


	package prev.phase.synan;
	
	import java.util.*;
	
	import prev.common.report.*;
	//import prev.data.ast.tree.*;
	//import prev.data.ast.tree.decl.*;
	//import prev.data.ast.tree.expr.*;
	//import prev.data.ast.tree.stmt.*;
	//import prev.data.ast.tree.type.*;
	import prev.phase.lexan.*;
	

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrevParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KWORD_BOOL=1, KWORD_CHAR=2, KWORD_DEL=3, KWORD_DO=4, KWORD_ELSE=5, KWORD_FUN=6, 
		KWORD_IF=7, KWORD_INT=8, KWORD_NEW=9, KWORD_THEN=10, KWORD_TYP=11, KWORD_VAR=12, 
		KWORD_VOID=13, KWORD_WHERE=14, KWORD_WHILE=15, SYM_LEFT_BRACE=16, SYM_RIGHT_BRACE=17, 
		SYM_LEFT_CURLY_BRACE=18, SYM_RIGHT_CURLY_BRACE=19, SYM_LEFT_BRACKET=20, 
		SYM_RIGHT_BRACKET=21, SYM_DOT=22, SYM_COMMA=23, SYM_COLON=24, SYM_SEMICOLON=25, 
		SYM_AND=26, SYM_OR=27, SYM_NOT=28, SYM_EQU=29, SYM_NEQ=30, SYM_LS=31, 
		SYM_GT=32, SYM_LSE=33, SYM_GTE=34, SYM_MUL=35, SYM_DIV=36, SYM_MOD=37, 
		SYM_PLUS=38, SYM_MINUS=39, SYM_POW=40, SYM_SET=41, CONST_VOID=42, CONST_BOOL=43, 
		CONST_INT=44, CONST_CHAR=45, CONST_STR=46, IDENTIFIER=47, COMMENT=48, 
		WHITE_SPACE=49, ERROR=50;
	public static final int
		RULE_source = 0, RULE_decl = 1, RULE_decl_type = 2, RULE_decl_var = 3, 
		RULE_decl_fun = 4, RULE_decl_fun_args = 5, RULE_decl_fun_arg = 6, RULE_type = 7, 
		RULE_type_atomic = 8, RULE_type_named = 9, RULE_type_array = 10, RULE_type_pointer = 11, 
		RULE_type_record = 12, RULE_type_enclosed = 13, RULE_record_atom = 14, 
		RULE_expr = 15, RULE_expr_const = 16, RULE_expr_var_access = 17, RULE_expr_fun_call = 18, 
		RULE_expr_alloc = 19, RULE_expr_compound = 20, RULE_expr_typecast = 21, 
		RULE_expr_enclosed = 22, RULE_expr_infix_mul = 23, RULE_expr_infix_add = 24, 
		RULE_expr_infix_rel = 25, RULE_expr_infix_and = 26, RULE_expr_infix_or = 27, 
		RULE_expr_prefix = 28, RULE_expr_postfix = 29, RULE_expr_where = 30, RULE_stmt = 31, 
		RULE_stmt_expr = 32, RULE_stmt_assign = 33, RULE_stmt_cond = 34, RULE_stmt_loop = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "decl", "decl_type", "decl_var", "decl_fun", "decl_fun_args", 
			"decl_fun_arg", "type", "type_atomic", "type_named", "type_array", "type_pointer", 
			"type_record", "type_enclosed", "record_atom", "expr", "expr_const", 
			"expr_var_access", "expr_fun_call", "expr_alloc", "expr_compound", "expr_typecast", 
			"expr_enclosed", "expr_infix_mul", "expr_infix_add", "expr_infix_rel", 
			"expr_infix_and", "expr_infix_or", "expr_prefix", "expr_postfix", "expr_where", 
			"stmt", "stmt_expr", "stmt_assign", "stmt_cond", "stmt_loop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "'char'", "'del'", "'do'", "'else'", "'fun'", "'if'", 
			"'int'", "'new'", "'then'", "'typ'", "'var'", "'void'", "'where'", "'while'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "','", "':'", "';'", 
			"'&'", "'|'", "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", 
			"'/'", "'%'", "'+'", "'-'", "'^'", "'='", "'none'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KWORD_BOOL", "KWORD_CHAR", "KWORD_DEL", "KWORD_DO", "KWORD_ELSE", 
			"KWORD_FUN", "KWORD_IF", "KWORD_INT", "KWORD_NEW", "KWORD_THEN", "KWORD_TYP", 
			"KWORD_VAR", "KWORD_VOID", "KWORD_WHERE", "KWORD_WHILE", "SYM_LEFT_BRACE", 
			"SYM_RIGHT_BRACE", "SYM_LEFT_CURLY_BRACE", "SYM_RIGHT_CURLY_BRACE", "SYM_LEFT_BRACKET", 
			"SYM_RIGHT_BRACKET", "SYM_DOT", "SYM_COMMA", "SYM_COLON", "SYM_SEMICOLON", 
			"SYM_AND", "SYM_OR", "SYM_NOT", "SYM_EQU", "SYM_NEQ", "SYM_LS", "SYM_GT", 
			"SYM_LSE", "SYM_GTE", "SYM_MUL", "SYM_DIV", "SYM_MOD", "SYM_PLUS", "SYM_MINUS", 
			"SYM_POW", "SYM_SET", "CONST_VOID", "CONST_BOOL", "CONST_INT", "CONST_CHAR", 
			"CONST_STR", "IDENTIFIER", "COMMENT", "WHITE_SPACE", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrevParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



		private Location loc(Token     tok) { return new Location((prev.data.sym.Token)tok); }
		private Location loc(Locatable loc) { return new Location(loc                 ); }
		private Location loc(Token     tok1, Token     tok2) { return new Location((prev.data.sym.Token)tok1, (prev.data.sym.Token)tok2); }
		private Location loc(Token     tok1, Locatable loc2) { return new Location((prev.data.sym.Token)tok1, loc2); }
		private Location loc(Locatable loc1, Token     tok2) { return new Location(loc1,                      (prev.data.sym.Token)tok2); }
		private Location loc(Locatable loc1, Locatable loc2) { return new Location(loc1,                      loc2); }


	public PrevParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public TerminalNode EOF() { return getToken(PrevParser.EOF, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			decl();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KWORD_FUN) | (1L << KWORD_TYP) | (1L << KWORD_VAR))) != 0)) {
				{
				{
				setState(73);
				decl();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Decl_typeContext decl_type() {
			return getRuleContext(Decl_typeContext.class,0);
		}
		public Decl_varContext decl_var() {
			return getRuleContext(Decl_varContext.class,0);
		}
		public Decl_funContext decl_fun() {
			return getRuleContext(Decl_funContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KWORD_TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				decl_type();
				}
				break;
			case KWORD_VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				decl_var();
				}
				break;
			case KWORD_FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				decl_fun();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_typeContext extends ParserRuleContext {
		public TerminalNode KWORD_TYP() { return getToken(PrevParser.KWORD_TYP, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYM_SET() { return getToken(PrevParser.SYM_SET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Decl_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_typeContext decl_type() throws RecognitionException {
		Decl_typeContext _localctx = new Decl_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(KWORD_TYP);
			setState(87);
			match(IDENTIFIER);
			setState(88);
			match(SYM_SET);
			setState(89);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_varContext extends ParserRuleContext {
		public TerminalNode KWORD_VAR() { return getToken(PrevParser.KWORD_VAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYM_COLON() { return getToken(PrevParser.SYM_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Decl_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_varContext decl_var() throws RecognitionException {
		Decl_varContext _localctx = new Decl_varContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(KWORD_VAR);
			setState(92);
			match(IDENTIFIER);
			setState(93);
			match(SYM_COLON);
			setState(94);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_funContext extends ParserRuleContext {
		public TerminalNode KWORD_FUN() { return getToken(PrevParser.KWORD_FUN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYM_LEFT_BRACE() { return getToken(PrevParser.SYM_LEFT_BRACE, 0); }
		public Decl_fun_argsContext decl_fun_args() {
			return getRuleContext(Decl_fun_argsContext.class,0);
		}
		public TerminalNode SYM_RIGHT_BRACE() { return getToken(PrevParser.SYM_RIGHT_BRACE, 0); }
		public TerminalNode SYM_COLON() { return getToken(PrevParser.SYM_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SYM_SET() { return getToken(PrevParser.SYM_SET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Decl_funContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_fun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl_fun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl_fun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl_fun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_funContext decl_fun() throws RecognitionException {
		Decl_funContext _localctx = new Decl_funContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decl_fun);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(KWORD_FUN);
			setState(97);
			match(IDENTIFIER);
			setState(98);
			match(SYM_LEFT_BRACE);
			setState(99);
			decl_fun_args();
			setState(100);
			match(SYM_RIGHT_BRACE);
			setState(101);
			match(SYM_COLON);
			setState(102);
			type();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SYM_SET) {
				{
				setState(103);
				match(SYM_SET);
				setState(104);
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_fun_argsContext extends ParserRuleContext {
		public List<Decl_fun_argContext> decl_fun_arg() {
			return getRuleContexts(Decl_fun_argContext.class);
		}
		public Decl_fun_argContext decl_fun_arg(int i) {
			return getRuleContext(Decl_fun_argContext.class,i);
		}
		public List<TerminalNode> SYM_COMMA() { return getTokens(PrevParser.SYM_COMMA); }
		public TerminalNode SYM_COMMA(int i) {
			return getToken(PrevParser.SYM_COMMA, i);
		}
		public Decl_fun_argsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_fun_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl_fun_args(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl_fun_args(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl_fun_args(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_fun_argsContext decl_fun_args() throws RecognitionException {
		Decl_fun_argsContext _localctx = new Decl_fun_argsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decl_fun_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(107);
				decl_fun_arg();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SYM_COMMA) {
					{
					{
					setState(108);
					match(SYM_COMMA);
					setState(109);
					decl_fun_arg();
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_fun_argContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYM_COLON() { return getToken(PrevParser.SYM_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Decl_fun_argContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_fun_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl_fun_arg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl_fun_arg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl_fun_arg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_fun_argContext decl_fun_arg() throws RecognitionException {
		Decl_fun_argContext _localctx = new Decl_fun_argContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decl_fun_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(IDENTIFIER);
			setState(118);
			match(SYM_COLON);
			setState(119);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type_atomicContext type_atomic() {
			return getRuleContext(Type_atomicContext.class,0);
		}
		public Type_namedContext type_named() {
			return getRuleContext(Type_namedContext.class,0);
		}
		public Type_arrayContext type_array() {
			return getRuleContext(Type_arrayContext.class,0);
		}
		public Type_pointerContext type_pointer() {
			return getRuleContext(Type_pointerContext.class,0);
		}
		public Type_recordContext type_record() {
			return getRuleContext(Type_recordContext.class,0);
		}
		public Type_enclosedContext type_enclosed() {
			return getRuleContext(Type_enclosedContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KWORD_BOOL:
			case KWORD_CHAR:
			case KWORD_INT:
			case KWORD_VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				type_atomic();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				type_named();
				}
				break;
			case SYM_LEFT_BRACKET:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				type_array();
				}
				break;
			case SYM_POW:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				type_pointer();
				}
				break;
			case SYM_LEFT_CURLY_BRACE:
				enterOuterAlt(_localctx, 5);
				{
				setState(125);
				type_record();
				}
				break;
			case SYM_LEFT_BRACE:
				enterOuterAlt(_localctx, 6);
				{
				setState(126);
				type_enclosed();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_atomicContext extends ParserRuleContext {
		public TerminalNode KWORD_VOID() { return getToken(PrevParser.KWORD_VOID, 0); }
		public TerminalNode KWORD_CHAR() { return getToken(PrevParser.KWORD_CHAR, 0); }
		public TerminalNode KWORD_INT() { return getToken(PrevParser.KWORD_INT, 0); }
		public TerminalNode KWORD_BOOL() { return getToken(PrevParser.KWORD_BOOL, 0); }
		public Type_atomicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_atomic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterType_atomic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitType_atomic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitType_atomic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_atomicContext type_atomic() throws RecognitionException {
		Type_atomicContext _localctx = new Type_atomicContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type_atomic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KWORD_BOOL) | (1L << KWORD_CHAR) | (1L << KWORD_INT) | (1L << KWORD_VOID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_namedContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public Type_namedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_named; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterType_named(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitType_named(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitType_named(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_namedContext type_named() throws RecognitionException {
		Type_namedContext _localctx = new Type_namedContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type_named);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
